roles/ocp4_workload_coo_incident_detection/files/applications/frontend/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: incident-simulator
  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: incident-simulator
    demo.redhat.com/name: coo-incident-detection
    demo.redhat.com/created-by: agnosticd
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
