roles/ocp4_workload_coo_incident_detection/files/applications/frontend/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: incident-simulator
  namespace: incident-simulator
  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: incident-simulator
    demo.redhat.com/name: coo-incident-detection
    demo.redhat.com/created-by: agnosticd
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
